# ManagementSystems

./: .clang-format  .clang-tidy  .dir-locals.el  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json
c/: CMakeLists.txt  config.h.cin
c/bank/include/bank/: bank.h  de.h  list.h  ser.h  string.h
c/bank/proto/: BankState.proto  bank.capnp
c/bank/src/: bank.c  de.c  find.c  find.h  load.c  load.h  save.c  save.h  ser.c  string.c  structure.c  structure.h  today.c  today.h
c/cmake/: Dump.cmake
c/management/include/management/: array.h  util.h  vector.h
c/management/src/: util.c
c/quiz/proto/: Quiz.proto
c/quiz/src/: define.c  define.h  deserialize.c  deserialize.h  question.c  question.h  quiz.c  quiz.h  quiz_application.c  quiz_application.h  serialize.c  serialize.h
c/third/binn/: CMakeLists.txt
cmake_modules/: PushDirectory.cmake
cpp/: CMakeLists.txt
rs/: .local_vimrc.vim  Cargo.toml
rs/bank_mgmt/: Cargo.toml
rs/bank_mgmt/src/: main.rs
rs/p938_range_sum_bst/src/: main.rs
