[package]
name = "bank_mgmt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
dialoguer = { version = "0.10.2", features = ["history", "completion"] }
rmp = "0.8.11"
rmp-serde = "1.1.0"
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.31"
